--- a/templates/environments/includes/db.base.yml
+++ b/templates/environments/includes/db.base.yml
@@ -18,7 +18,7 @@ services:
       - mysqld
       - --max_allowed_packet=1024M
       - --explicit_defaults_for_timestamp=on
-{{if ge 10.5 .mariadb_version}}
+{{if ge 10.5 (float64 .mariadb_version)}}
       - --log-bin-trust-function-creators=on
 {{end}}
 {{if eq (default "" .mysql_character_set_server) ""}}
