--- a/images/varnish/centos8/6.6/Dockerfile
+++ b/images/varnish/centos8/6.6/Dockerfile
@@ -1,19 +1,15 @@
-FROM centos:7
+FROM centos:8
 
-ARG RPM_SCRIPT=https://packagecloud.io/install/repositories/varnishcache/varnish41/script.rpm.sh
+ARG RPM_SCRIPT=https://packagecloud.io/install/repositories/varnishcache/varnish66/script.rpm.sh
 
 COPY --from=janosmiko/envsubst /usr/bin/envsubst /usr/local/bin/envsubst
 
 RUN set -eux \
   && curl -fsSLo- "${RPM_SCRIPT}" | bash \
-  && yum install -y epel-release \
-  && yum install -y \
-     varnish \
-     #gettext \
-  && yum clean all && rm -rf /var/cache/yum
-#  && curl -fsSLo /usr/bin/envsubst \
-#     "https://github.com/a8m/envsubst/releases/download/v1.2.0/envsubst-`uname -s`-`uname -m`" \
-#  && chmod +x /usr/bin/envsubst
+  && dnf install -y epel-release \
+  && dnf install -y varnish \
+  && dnf clean all \
+  && rm -rf /var/cache/dnf
 
 ENV VCL_CONFIG      /etc/varnish/default.vcl
 ENV CACHE_SIZE      256m
