--- a/images/varnish/centos8/6.0/Dockerfile
+++ b/images/varnish/centos8/6.0/Dockerfile
@@ -1,4 +1,4 @@
-FROM centos:7
+FROM centos:8
 
 ARG RPM_SCRIPT=https://packagecloud.io/install/repositories/varnishcache/varnish60lts/script.rpm.sh
 
@@ -6,14 +6,10 @@ COPY --from=janosmiko/envsubst /usr/bin/envsubst /usr/local/bin/envsubst
 
 RUN set -eux \
   && curl -fsSLo- "${RPM_SCRIPT}" | bash \
-  && yum install -y epel-release \
-  && yum install -y \
-     varnish \
-     #gettext \
-  && yum clean all && rm -rf /var/cache/yum
-#  && curl -fsSLo /usr/bin/envsubst \
-#     "https://github.com/a8m/envsubst/releases/download/v1.2.0/envsubst-`uname -s`-`uname -m`" \
-#  && chmod +x /usr/bin/envsubst
+  && dnf install -y epel-release \
+  && dnf install -y varnish \
+  && dnf clean all \
+  && rm -rf /var/cache/dnf
 
 ENV VCL_CONFIG      /etc/varnish/default.vcl
 ENV CACHE_SIZE      256m
@@ -27,6 +23,5 @@ ENV BACKEND_PORT    80
 ENV ACL_PURGE_HOST  0.0.0.0/0
 
 EXPOSE 	80
-CMD envsubst '${BACKEND_HOST} ${BACKEND_PORT} ${ACL_PURGE_HOST}' \
-        < /etc/varnish/default.vcl.template > /etc/varnish/default.vcl \
+CMD envsubst < /etc/varnish/default.vcl.template > /etc/varnish/default.vcl \
     && varnishd -F -f $VCL_CONFIG -s malloc,$CACHE_SIZE $VARNISHD_PARAMS
