--- a/.github/workflows/docker-image-nginx.yml
+++ b/.github/workflows/docker-image-nginx.yml
@@ -15,8 +15,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - run: ./images/scripts/build.sh --push "${BUILD_GROUP}"
+    - run: ./images/scripts/build.sh "${BUILD_GROUP}"
       env:
         BUILD_GROUP: nginx
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        PUSH: "true"
