--- a/images/php-fpm/centos7/magento2-web/Dockerfile
+++ b/images/php-fpm/centos7/magento2-web/Dockerfile
@@ -19,7 +19,7 @@ ENV NGINX_PUBLIC                  '/pub'
 ENV NGINX_TEMPLATE                magento2.conf
 ENV XDEBUG_CONNECT_BACK_HOST      '""'
 
-COPY magento2-web/docker-entrypoint stop-supervisor.sh /usr/local/bin/
+COPY magento2-web/docker-entrypoint magento2-web/stop-supervisor.sh /usr/local/bin/
 COPY magento2-web/etc/. /etc/
 
 RUN set -eux \
