--- a/images/php-fpm/debian/magento1/Dockerfile
+++ b/images/php-fpm/debian/magento1/Dockerfile
@@ -1,6 +1,6 @@
+ARG IMAGE_NAME="rewardenv/php-fpm"
 ARG PHP_VERSION
-
-FROM rewardenv/php-fpm:${PHP_VERSION}-debian
+FROM ${IMAGE_NAME}:${PHP_VERSION}-debian
 
 USER root
 
