--- a/images/php-fpm/centos7/wordpress/debug/Dockerfile
+++ b/images/php-fpm/centos7/wordpress/debug/Dockerfile
@@ -1,10 +1,11 @@
+ARG IMAGE_NAME="rewardenv/php-fpm"
 ARG PHP_VERSION
-FROM rewardenv/php-fpm:${PHP_VERSION}-wordpress
+FROM ${IMAGE_NAME}:${PHP_VERSION}-wordpress
 USER root
 
 RUN set -eux \
-    && yum install -y php-pecl-xdebug \
-    && yum clean all && rm -rf /var/cache/yum
+  && yum install -y php-pecl-xdebug \
+  && yum clean all && rm -rf /var/cache/yum
 
 COPY debug/etc/*.ini /etc/
 COPY debug/etc/php.d/*.ini /etc/php.d/
