--- a/images/php-fpm/debian/magento2-web/Dockerfile
+++ b/images/php-fpm/debian/magento2-web/Dockerfile
@@ -1,5 +1,6 @@
+ARG IMAGE_NAME="rewardenv/php-fpm"
 ARG PHP_VERSION
-FROM rewardenv/php-fpm:${PHP_VERSION}-magento2-debian
+FROM ${IMAGE_NAME}:${PHP_VERSION}-magento2-debian
 USER root
 
 ENV CRON_ENABLED   true
