--- a/images/php-fpm/debian/magento2/Dockerfile
+++ b/images/php-fpm/debian/magento2/Dockerfile
@@ -1,5 +1,6 @@
+ARG IMAGE_NAME="rewardenv/php-fpm"
 ARG PHP_VERSION
-FROM rewardenv/php-fpm:${PHP_VERSION}-debian
+FROM ${IMAGE_NAME}:${PHP_VERSION}-debian
 USER root
 
 # Resolve permission issues stemming from directories auto-created by docker due to mounts in sub-directories
