--- a/images/php-fpm/debian/magento2/debug/Dockerfile
+++ b/images/php-fpm/debian/magento2/debug/Dockerfile
@@ -1,6 +1,6 @@
+ARG IMAGE_NAME="rewardenv/php-fpm"
 ARG PHP_VERSION
-
-FROM rewardenv/php-fpm:${PHP_VERSION}-magento2-debian
+FROM ${IMAGE_NAME}:${PHP_VERSION}-magento2-debian
 
 ARG PHP_VERSION
 
