--- a/images/php/debian/fpm/Dockerfile
+++ b/images/php/debian/fpm/Dockerfile
@@ -1,6 +1,6 @@
+ARG IMAGE_NAME="rewardenv/php"
 ARG PHP_VERSION
-
-FROM rewardenv/php:${PHP_VERSION}-debian
+FROM ${IMAGE_NAME}:${PHP_VERSION}-debian
 
 ARG PHP_VERSION
 
@@ -9,25 +9,25 @@ RUN set -eux \
   && rm -rf /var/lib/apt/lists/* \
 	&& cd /etc/php/${PHP_VERSION}/fpm \
 	&& { \
-		 echo '[global]'; \
-		 echo 'error_log = /proc/self/fd/2'; \
-		 echo; \
-		 echo '[www]'; \
-		 echo '; if we send this to /proc/self/fd/1, it never appears'; \
-		 echo 'access.log = /proc/self/fd/2'; \
-		 echo; \
-		 echo 'clear_env = no'; \
-		 echo; \
-		 echo '; Ensure worker stdout and stderr are sent to the main error log.'; \
-		 echo 'catch_workers_output = yes'; \
-	   } | tee pool.d/docker.conf \
+     echo '[global]'; \
+     echo 'error_log = /proc/self/fd/2'; \
+     echo; \
+     echo '[www]'; \
+     echo '; if we send this to /proc/self/fd/1, it never appears'; \
+     echo 'access.log = /proc/self/fd/2'; \
+     echo; \
+     echo 'clear_env = no'; \
+     echo; \
+     echo '; Ensure worker stdout and stderr are sent to the main error log.'; \
+     echo 'catch_workers_output = yes'; \
+     } | tee pool.d/docker.conf \
 	&& { \
-		 echo '[global]'; \
-		 echo 'daemonize = no'; \
-		 echo; \
-		 echo '[www]'; \
-		 echo 'listen = 9000'; \
-	   } | tee pool.d/zz-docker.conf \
+     echo '[global]'; \
+     echo 'daemonize = no'; \
+     echo; \
+     echo '[www]'; \
+     echo 'listen = 9000'; \
+     } | tee pool.d/zz-docker.conf \
   && perl -pi -e 's/^(pid|error_log|daemonize)/;$1/g' /etc/php/${PHP_VERSION}/fpm/php-fpm.conf \
   && perl -pi -e 's/^(listen)/;$1/g' /etc/php/${PHP_VERSION}/fpm/pool.d/www.conf \
   && perl -pi -e 's/^(php_admin_(value|flag))/;$1/g' /etc/php/${PHP_VERSION}/fpm/pool.d/www.conf \
