--- a/images/php-fpm/debian/_base/Dockerfile
+++ b/images/php-fpm/debian/_base/Dockerfile
@@ -1,7 +1,8 @@
 ARG IMAGE_NAME="rewardenv/php"
+ARG IMAGE_BASE="debian"
 ARG PHP_VERSION
 ARG PHP_VARIANT="fpm-loaders"
-FROM ${IMAGE_NAME}:${PHP_VERSION}-${PHP_VARIANT}-debian
+FROM ${IMAGE_NAME}:${PHP_VERSION}-${PHP_VARIANT}-${IMAGE_BASE}
 
 ARG PHP_VERSION
 
