--- a/images/php-fpm/debian/magento1/blackfire/Dockerfile
+++ b/images/php-fpm/debian/magento1/blackfire/Dockerfile
@@ -1,6 +1,7 @@
 ARG IMAGE_NAME="rewardenv/php-fpm"
+ARG IMAGE_BASE="debian"
 ARG PHP_VERSION
-FROM ${IMAGE_NAME}:${PHP_VERSION}-magento1-debian
+FROM ${IMAGE_NAME}:${PHP_VERSION}-magento1-${IMAGE_BASE}
 
 ARG PHP_VERSION
 
