--- a/images/php/debian/fpm-loaders/Dockerfile
+++ b/images/php/debian/fpm-loaders/Dockerfile
@@ -10,6 +10,7 @@ RUN set -eux \
   && curl -fsSLO https://www.sourceguardian.com/loaders/download/loaders.linux-x86_64.tar.gz \
   && tar xzf loaders.linux-x86_64.tar.gz \
   && cp ixed.${PHP_VERSION}.lin "$(php -i | grep '^extension_dir =' | cut -d' ' -f3)/sourceguardian.so" \
+  && echo "extension=sourceguardian.so" > /etc/php/${PHP_VERSION}/cli/conf.d/15-sourceguardian.ini \
   && echo "extension=sourceguardian.so" > /etc/php/${PHP_VERSION}/fpm/conf.d/15-sourceguardian.ini \
   && rm -rf /tmp/sourceguardian \
   # Install and enable IonCube loader
@@ -20,6 +21,7 @@ RUN set -eux \
   && IONCUBE_LOADER_PATH=ioncube/ioncube_loader_lin_${PHP_VERSION}.so \
   && if [ -f "${IONCUBE_LOADER_PATH}" ]; then \
        cp "${IONCUBE_LOADER_PATH}" "$(php -i | grep '^extension_dir =' | cut -d' ' -f3)/ioncube_loader.so" \
+         && echo "zend_extension=ioncube_loader.so" > /etc/php/${PHP_VERSION}/cli/conf.d/01-ioncube-loader.ini; \
          && echo "zend_extension=ioncube_loader.so" > /etc/php/${PHP_VERSION}/fpm/conf.d/01-ioncube-loader.ini; \
      else \
        >&2 printf "\033[33mWARNING\033[0m: IonCube loaders for PHP_VERSION %s could not be found at %s\n" \
