fix: php-fpm container should include loaders for php cli too

--- a/images/php/centos8/fpm-loaders/Dockerfile
+++ b/images/php/centos8/fpm-loaders/Dockerfile
@@ -9,8 +9,15 @@ RUN set -eux \
   && cd /tmp/sourceguardian \
   && curl -fsSLO https://www.sourceguardian.com/loaders/download/loaders.linux-x86_64.tar.gz \
   && tar xzf loaders.linux-x86_64.tar.gz \
-  && cp ixed.${PHP_VERSION}.lin "$(php -i | grep '^extension_dir =' | cut -d' ' -f3)/sourceguardian.so" \
-  && echo "extension=sourceguardian.so" > /etc/php.d/15-sourceguardian.ini \
+  && tar xzf loaders.linux-x86_64.tar.gz \
+  && SOURCEGUARDIAN_LOADER_PATH="ixed.${PHP_VERSION}.lin" \
+  && if [ -f "${SOURCEGUARDIAN_LOADER_PATH}" ]; then \
+       cp ixed.${PHP_VERSION}.lin "$(php -i | grep '^extension_dir =' | cut -d' ' -f3)/sourceguardian.so" \
+         && echo "extension=sourceguardian.so" > /etc/php.d/15-sourceguardian.ini; \
+     else \
+       >&2 printf "\033[33mWARNING\033[0m: SourceGuardian loaders for PHP_VERSION %s could not be found at %s\n" \
+         "${PHP_VERSION}" "${SOURCEGUARDIAN_LOADER_PATH}"; \
+     fi \
   && rm -rf /tmp/sourceguardian \
   # Install and enable IonCube loader
   && mkdir -p /tmp/ioncube \
