fix: php-fpm container should include loaders for php cli too

--- a/images/php/debian/cli-loaders/Dockerfile
+++ b/images/php/debian/cli-loaders/Dockerfile
@@ -12,7 +12,7 @@ RUN set -eux \
   && SOURCEGUARDIAN_LOADER_PATH="ixed.${PHP_VERSION}.lin" \
   && if [ -f "${SOURCEGUARDIAN_LOADER_PATH}" ]; then \
        cp "${SOURCEGUARDIAN_LOADER_PATH}" "$(php -i | grep '^extension_dir =' | cut -d' ' -f3)/sourceguardian.so" \
-         && echo -e "; priority=15\nextension=sourceguardian.so" > /etc/php/${PHP_VERSION}/mods-available/sourceguardian.ini \
+         && printf "; priority=15\nextension=sourceguardian.so" > /etc/php/${PHP_VERSION}/mods-available/sourceguardian.ini \
          && phpenmod sourceguardian; \
      else \
        >&2 printf "\033[33mWARNING\033[0m: SourceGuardian loaders for PHP_VERSION %s could not be found at %s\n" \
@@ -27,7 +27,7 @@ RUN set -eux \
   && IONCUBE_LOADER_PATH="ioncube/ioncube_loader_lin_${PHP_VERSION}.so" \
   && if [ -f "${IONCUBE_LOADER_PATH}" ]; then \
        cp "${IONCUBE_LOADER_PATH}" "$(php -i | grep '^extension_dir =' | cut -d' ' -f3)/ioncube_loader.so" \
-         && echo -e "; priority=01\nzend_extension=ioncube_loader.so" > /etc/php/${PHP_VERSION}/mods-available/ioncube-loader.ini \
+         && printf "; priority=01\nzend_extension=ioncube_loader.so" > /etc/php/${PHP_VERSION}/mods-available/ioncube-loader.ini \
          && phpenmod ioncube-loader; \
      else \
        >&2 printf "\033[33mWARNING\033[0m: IonCube loaders for PHP_VERSION %s could not be found at %s\n" \
