--- a/images/php/centos7/cli-loaders/Dockerfile
+++ b/images/php/centos7/cli-loaders/Dockerfile
@@ -12,7 +12,7 @@ RUN set -eux \
   && SOURCEGUARDIAN_LOADER_PATH="ixed.${PHP_VERSION}.lin" \
   && if [ -f "${SOURCEGUARDIAN_LOADER_PATH}" ]; then \
        cp ixed.${PHP_VERSION}.lin "$(php -i | grep '^extension_dir =' | cut -d' ' -f3)/sourceguardian.so" \
-         && echo "extension=sourceguardian.so" > /etc/php.d/15-sourceguardian.ini; \
+         && printf "extension=sourceguardian.so" > /etc/php.d/15-sourceguardian.ini; \
      else \
        >&2 printf "\033[33mWARNING\033[0m: SourceGuardian loaders for PHP_VERSION %s could not be found at %s\n" \
          "${PHP_VERSION}" "${SOURCEGUARDIAN_LOADER_PATH}"; \
@@ -26,7 +26,7 @@ RUN set -eux \
   && IONCUBE_LOADER_PATH=ioncube/ioncube_loader_lin_${PHP_VERSION}.so \
   && if [ -f "${IONCUBE_LOADER_PATH}" ]; then \
        cp "${IONCUBE_LOADER_PATH}" "$(php -i | grep '^extension_dir =' | cut -d' ' -f3)/ioncube_loader.so" \
-         && echo "zend_extension=ioncube_loader.so" >/etc/php.d/01-ioncube-loader.ini; \
+         && printf "zend_extension=ioncube_loader.so" >/etc/php.d/01-ioncube-loader.ini; \
      else \
        >&2 printf "\033[33mWARNING\033[0m: IonCube loaders for PHP_VERSION %s could not be found at %s\n" \
          "${PHP_VERSION}" "${IONCUBE_LOADER_PATH}"; \
