chore: add magento install script for magento2-web container

--- a/images/php-fpm/debian/magento2-web/Dockerfile
+++ b/images/php-fpm/debian/magento2-web/Dockerfile
@@ -21,7 +21,7 @@ ENV NGINX_PUBLIC                  '/pub'
 ENV NGINX_TEMPLATE                magento2.conf
 ENV XDEBUG_CONNECT_BACK_HOST      '""'
 
-COPY magento2-web/docker-entrypoint magento2-web/stop-supervisor.sh /usr/local/bin/
+COPY magento2-web/docker-entrypoint magento2-web/stop-supervisor.sh magento2-web/install-magento2.sh /usr/local/bin/
 COPY magento2-web/etc/. /etc/
 
 RUN set -eux \
