--- a/images/node/12/Dockerfile
+++ b/images/node/12/Dockerfile
@@ -3,17 +3,17 @@ FROM node:12-alpine
 ARG DOCKER_START_COMMAND="yarn watch"
 
 RUN set -eux \
- && apk add --no-cache --virtual .build-deps \
-    python \
-    make \
-    gcc \
-    g++ \
- && apk add --no-cache \
-    git \
-    openssh-client \
-    yarn \
- && mkdir -p /usr/src/app \
- && chown node:node -R /usr/src/app /usr/local/lib/node_modules /usr/local/share/
+  && apk add --no-cache --virtual .build-deps \
+     python \
+     make \
+     gcc \
+     g++ \
+  && apk add --no-cache \
+     git \
+     openssh-client \
+     yarn \
+  && mkdir -p /usr/src/app \
+  && chown node:node -R /usr/src/app
 
 ENV GIT_SSH_COMMAND="ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no"
 ENV DOCKER_START_COMMAND=${DOCKER_START_COMMAND}
