--- a/templates/environments/magento2/magento2.magepack.windows.yml
+++ b/templates/environments/magento2/magento2.magepack.windows.yml
@@ -1,7 +1,9 @@
 version: "3.5"
 
-{{if not (isEnabledStrict .reward_wsl2_direct_mount)}}
 x-volumes: &volumes
+{{if isEnabledStrict .reward_wsl2_direct_mount}}
+  - .{{default "" .reward_web_root}}/:/var/www/html
+{{else}}
   - .{{default "" .reward_web_root}}/pub/media:/var/www/html/pub/media:cached
   - appdata:/var/www/html
 {{end}}
