--- a/images/varnish/centos8/6.6/Dockerfile
+++ b/images/varnish/centos8/6.6/Dockerfile
@@ -7,7 +7,9 @@ COPY --from=janosmiko/envsubst /usr/bin/envsubst /usr/local/bin/envsubst
 RUN set -eux \
   && curl -fsSLo- "${RPM_SCRIPT}" | bash \
   && dnf install -y epel-release \
-  && dnf install -y varnish \
+  && dnf install -y \
+     supervisor \
+     varnish \
   && dnf clean all \
   && rm -rf /var/cache/dnf
 
@@ -16,12 +18,14 @@ ENV CACHE_SIZE      256m
 ENV VARNISHD_PARAMS -p default_ttl=3600 -p default_grace=3600 \
     -p feature=+esi_ignore_https -p feature=+esi_disable_xml_check
 
-COPY default.vcl /etc/varnish/default.vcl.template
+COPY . /
+
+RUN set -eux \
+  && chmod +x /usr/local/bin/stop-supervisor.sh
 
 ENV BACKEND_HOST    nginx
 ENV BACKEND_PORT    80
 ENV ACL_PURGE_HOST  0.0.0.0/0
 
 EXPOSE 	80
-CMD envsubst < /etc/varnish/default.vcl.template > /etc/varnish/default.vcl \
-    && varnishd -F -f $VCL_CONFIG -s malloc,$CACHE_SIZE $VARNISHD_PARAMS
+CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/supervisord.conf"]
