--- a/images/varnish/debian/6.4/Dockerfile
+++ b/images/varnish/debian/6.4/Dockerfile
@@ -8,7 +8,8 @@ ENV ACLOCAL_PATH /usr/share/aclocal
 ENV VMOD_DYNAMIC_VERSION 2.2.1
 RUN set -eux \
   && apt-get update && apt-get upgrade -y \
-  && apt-get install -y --no-install-recommends build-essential \
+  && apt-get install -y --no-install-recommends --allow-downgrades \
+    build-essential \
     autoconf \
     automake \
     git \
@@ -20,6 +21,7 @@ RUN set -eux \
     wget \
     unzip \
     libgetdns-dev \
+    varnish="$VARNISH_VERSION" \
     varnish-dev="$VARNISH_VERSION" \
   && VARNISH_VERSION_SHORT="$(echo $VARNISH_VERSION | cut -f1,2 -d'.')" \
   && git clone --single-branch --branch "${VARNISH_VERSION_SHORT}" https://github.com/nigoroll/libvmod-dynamic.git /tmp/libvmod-dynamic \
@@ -38,7 +40,10 @@ COPY --from=janosmiko/envsubst /usr/bin/envsubst /usr/local/bin/envsubst
 
 RUN set -eux \
   && apt-get update && apt-get upgrade -y \
-  && apt-get install -y --no-install-recommends libgetdns10 \
+  && apt-get install -y --no-install-recommends --allow-downgrades \
+     libgetdns10 \
+     supervisor \
+     varnish="$VARNISH_VERSION" \
   && rm -rf /var/lib/apt/lists/* \
   && PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/sbin" ldconfig -n /usr/lib/varnish/vmods
 
@@ -47,7 +52,10 @@ ENV CACHE_SIZE      256m
 ENV VARNISHD_PARAMS -p default_ttl=3600 -p default_grace=3600 \
     -p feature=+esi_ignore_https -p feature=+esi_disable_xml_check
 
-COPY default-dynamic.vcl /etc/varnish/default.vcl.template
+COPY . /
+
+RUN set -eux \
+  && chmod +x /usr/local/bin/stop-supervisor.sh
 
 # because of env substition the valid values are "true" or empty
 ENV PROBE_DISABLED  true
@@ -58,5 +66,4 @@ ENV BACKEND_PORT    80
 ENV ACL_PURGE_HOST  0.0.0.0/0
 
 EXPOSE 	80
-CMD envsubst < /etc/varnish/default.vcl.template > /etc/varnish/default.vcl \
-    && varnishd -F -f $VCL_CONFIG -s malloc,$CACHE_SIZE $VARNISHD_PARAMS
+CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/supervisord.conf"]
