update varnish configuration, disable build for varnish 6 on debian bullseye

--- a/images/varnish/context/etc/supervisor/conf.d/varnish.conf
+++ b/images/varnish/context/etc/supervisor/conf.d/varnish.conf
@@ -12,7 +12,7 @@ stderr_logfile=/dev/fd/1
 stderr_logfile_maxbytes=0
 
 [program:varnishncsa]
-command=varnishncsa -F "[%%{x-forwarded-for}i] %%u %%t %%{Varnish:handling}x \"%%r\" %%s %%b %%T \"%%{Referer}i\" \"%%{User-agent}i\""
+command=varnishncsa -q 'ReqURL ne "/varnishcheck"' -F "[%%{x-forwarded-for}i] %%u %%t %%{Varnish:handling}x \"%%r\" %%s \"%%{VSL:RespReason}x\" %%b %%T \"%%{Referer}i\" \"%%{User-agent}i\""
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/fd/1
