--- a/images/varnish/context/etc/supervisor/conf.d/varnish.conf
+++ b/images/varnish/context/etc/supervisor/conf.d/varnish.conf
@@ -1,5 +1,5 @@
 [program:config]
-command=sh -c "envsubst < /etc/varnish/default.vcl.template > /etc/varnish/default.vcl"
+command=sh -c "gomplate < /etc/varnish/default.vcl.template > /etc/varnish/default.vcl"
 priority=1
 startsecs=0
 autorestart=false
