--- a/images/varnish/debian/4.1/Dockerfile
+++ b/images/varnish/debian/4.1/Dockerfile
@@ -1,22 +1,25 @@
-FROM debian:stretch-slim as builder
+ARG VARNISH_VERSION="4.1.11-1~stretch"
+ARG VARNISH_REPO_VERSION="41"
+ARG DEB_SCRIPT="https://packagecloud.io/install/repositories/varnishcache/varnish${VARNISH_REPO_VERSION}/script.deb.sh"
 
-ARG DEB_SCRIPT=https://packagecloud.io/install/repositories/varnishcache/varnish41/script.deb.sh
+FROM debian:stretch-slim AS builder
 
-ENV PKG_CONFIG_PATH /usr/lib/pkgconfig
-ENV ACLOCAL_PATH    /usr/share/aclocal
-ENV VARNISH_VERSION 4.1.11-1~stretch
+ARG VARNISH_VERSION
+ARG VARNISH_REPO_VERSION
+ARG DEB_SCRIPT
+ENV PKG_CONFIG_PATH /usr/local/lib/pkgconfig
+ENV ACLOCAL_PATH /usr/local/share/aclocal
 
 RUN set -eux \
   && apt-get update && apt-get upgrade -y \
-  && apt-get install -y --no-install-recommends \
+  && apt-get install -y --no-install-recommends --allow-downgrades \
     ca-certificates \
     curl \
-  && curl -fsSLo- "${DEB_SCRIPT}" | bash \
-  && apt-get update \
-  && apt-get install -y --no-install-recommends \
+  && curl -fsSL "${DEB_SCRIPT}" | bash \
+  && apt-get install -y --no-install-recommends --allow-downgrades \
+    build-essential \
     autoconf \
     automake \
-    build-essential \
     git \
     libtool \
     make \
@@ -28,36 +31,42 @@ RUN set -eux \
     libgetdns-dev \
     varnish=${VARNISH_VERSION} \
     varnish-dev=${VARNISH_VERSION} \
-  && rm -rf /var/lib/apt/lists/* \
-  && VARNISH_VERSION_SHORT="$(echo $VARNISH_VERSION | cut -f1,2 -d'.')" \
+  && VARNISH_VERSION_SHORT="$(echo ${VARNISH_VERSION} | cut -f1,2 -d'.')" \
   && git clone --single-branch --branch "${VARNISH_VERSION_SHORT}" https://github.com/nigoroll/libvmod-dynamic.git /tmp/libvmod-dynamic \
-  && cd "/tmp/libvmod-dynamic" \
+  && cd /tmp/libvmod-dynamic \
   && chmod +x ./autogen.sh \
   && ./autogen.sh \
   && ./configure --prefix=/usr \
   && make -j "$(nproc)" \
   && make install
+# Vmods do not exist for Varnish 4.1
+#  && git clone --single-branch --branch "${VARNISH_VERSION_SHORT}" https://github.com/varnish/varnish-modules.git /tmp/varnish-modules \
+#  && cd /tmp/varnish-modules \
+#  && ./bootstrap \
+#  && ./configure \
+#  && make install
 
 FROM debian:stretch-slim
 
 COPY --from=builder /usr/lib/varnish/vmods/ /usr/lib/varnish/vmods/
 COPY --from=builder /usr/lib/varnish/vmods/ /usr/lib/x86_64-linux-gnu/varnish/vmods/
-COPY --from=janosmiko/envsubst /usr/bin/envsubst /usr/local/bin/envsubst
+#COPY --from=janosmiko/envsubst /usr/bin/envsubst /usr/local/bin/envsubst
+COPY --from=hairyhenderson/gomplate:stable /gomplate /usr/local/bin/gomplate
 
-ARG DEB_SCRIPT=https://packagecloud.io/install/repositories/varnishcache/varnish41/script.deb.sh
-
-ENV VARNISH_VERSION 4.1.11-1~stretch
+ARG VARNISH_VERSION
+ARG VARNISH_REPO_VERSION
+ARG DEB_SCRIPT
 
 RUN set -eux \
   && apt-get update && apt-get upgrade -y \
-  && apt-get install -y --no-install-recommends \
+  && apt-get install -y --no-install-recommends --allow-downgrades \
     ca-certificates \
     curl \
-  && curl -fsSLo- "${DEB_SCRIPT}" | bash \
-  && apt-get update && apt-get install -y --no-install-recommends \
-    libgetdns1 \
-    supervisor \
-    varnish=${VARNISH_VERSION} \
+  && curl -fsSL "${DEB_SCRIPT}" | bash \
+  && apt-get install -y --no-install-recommends --allow-downgrades \
+     libgetdns1 \
+     supervisor \
+     varnish=${VARNISH_VERSION} \
   && rm -rf /var/lib/apt/lists/* \
   && PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/sbin" ldconfig -n /usr/lib/varnish/vmods
 
@@ -81,5 +90,4 @@ ENV BACKEND_PORT    80
 ENV ACL_PURGE_HOST  0.0.0.0/0
 
 EXPOSE 	80
-
 CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/supervisord.conf"]
