--- a/images/php-fpm/centos7/magento2/Dockerfile
+++ b/images/php-fpm/centos7/magento2/Dockerfile
@@ -8,15 +8,14 @@ ENV CHOWN_DIR_LIST "pub/media"
 
 RUN set -eux \
   && npm install -g grunt-cli gulp yarn \
-  && PHP_VERSION=$(php -v | head -n1 | cut -d' ' -f2 | awk -F '.' '{print $1$2}') \
-  && if (( ${PHP_VERSION} >= 72 )); \
+  && PHP_VERSION_STRIPPED=$(echo $PHP_VERSION | awk -F '.' '{print $1$2}') \
+  && if [ "${PHP_VERSION_STRIPPED}" -ge 72 ]; \
        then MAGERUN_PHAR_URL=https://files.magerun.net/n98-magerun2.phar; \
        else MAGERUN_PHAR_URL=https://files.magerun.net/n98-magerun2-3.2.0.phar; \
      fi \
   && curl -fsSLo /usr/bin/n98-magerun ${MAGERUN_PHAR_URL} \
   && chmod +x /usr/bin/n98-magerun \
-  && PHP_VERSION=$(php -v | head -n1 | cut -d' ' -f2 | awk -F '.' '{print $1$2}') \
-  && if (( ${PHP_VERSION} >= 72 )); \
+  && if [ "${PHP_VERSION_STRIPPED}" -ge 72 ]; \
        then MAGERUN_BASH_REF=master; \
        else MAGERUN_BASH_REF=3.2.0; \
      fi \
