--- a/images/varnish/centos7/4.1/Dockerfile
+++ b/images/varnish/centos7/4.1/Dockerfile
@@ -2,7 +2,8 @@ FROM centos:7
 
 ARG RPM_SCRIPT=https://packagecloud.io/install/repositories/varnishcache/varnish41/script.rpm.sh
 
-COPY --from=janosmiko/envsubst /usr/bin/envsubst /usr/local/bin/envsubst
+#COPY --from=janosmiko/envsubst /usr/bin/envsubst /usr/local/bin/envsubst
+COPY --from=hairyhenderson/gomplate:slim /gomplate /usr/local/bin/gomplate
 
 RUN set -eux \
   && curl -fsSLo- "${RPM_SCRIPT}" | bash \
